# LoaderSpot

./: .gitignore  LoaderSpot.py  README.md  check-build-version.ps1  check_deb_versions.py  get-build-info.ps1  ms-spotify-check.ps1  upd.py  update_version.py  update_versions.py
.github/workflows/: build-to-release.yml  check-deb-versions.yml  ms-spotify.yml  sync-files.yml  update_versions.yml  version-check.yml
LoaderSpot_CLI/: Cargo.toml
LoaderSpot_CLI/src/: main.rs
LoaderSpot_UI/: Cargo.toml  Main.rs
LoaderSpot_UI/src/: main.rs
