[package]
name = "spotify_finder"
version = "0.1.0"
edition = "2025"

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
winapi = { version = "0.3", features = ["winuser"] }
